--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -2,18 +2,33 @@
 :toc: right
 :toclevels: 2
 
-:description: Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides information on installation and administration tasks for oCIS, the next generation of open source file sharing and synchronization solutions.
+:ocis_youtube_long_url: https://www.youtube.com/watch?v=C4a4q9IGyFQ&list=PLXpTv1ixYy3-b5LScHyYqMNwEsZYgejdX&index=16
+:ocis_youtube_short_url: C4a4q9IGyFQ
+
+:description: Welcome to the ownCloud Infinite Scale (oCIS) documentation. ownCloud Infinite Scale is a data platform providing tools to integrate, organize, share and govern data and metadata. This guide provides information on general topics and on installation and administrative tasks for oCIS.
 
 == Introduction
 
 {description}
 
-oCIS key benefits:
+=== ownCloud Infinite Scale Key Benefits
 
+The oCIS data platform is designed for multi storage access, is cloud native (microservices) and provides unified data access.
+
+The key benefits are::
+
+* Integrate distributed data sources into one Cloud Data Ecosystem
+* Provide a Unifed Data Access layer across all data
+* Merge on-prem and cloud operated environments into one user experience
 * No need for PHP or a database
 * High performance, flexibility and scalability
 * Extended functionality
-* Single binary delivery, shipped with the user interface `ownCloud Web`
+* Single binary or container delivery, shipped with the user interface `ownCloud Web`
+
+See the following inline YouTube video for more details or use the link:{ocis_youtube_long_url}[link, window=_blank] to view it in an own browser tab.
+
+.Infinite Scale - A new era for ownCloud - ownCloud Conference 2021
+video::{ocis_youtube_short_url}[youtube]
 
 // fixme: we should have a cross component link to owncloud web when available
 // fixme: shall we have a feature list page ?
@@ -22,11 +37,15 @@ oCIS key benefits:
 
 === Architecture and Concepts
 
-To learn more about oCIS, check out the xref:architecture/index.adoc[Architecture and Concepts] section first. This information may help deciding which installation options you would like to go for and which hardware fits your needs best.
+To learn more about oCIS, check out the xref:architecture/index.adoc[Architecture and Concepts] section first. This information may help deciding which environment is optimal for your use case and which hardware fits your needs best.
+
+=== Availability and Scalability
+
+With knowledge about architecture and concepts, look at the different xref:availability_scaling/index.adoc[Availability and Scalability] options to define your environment oCIS should run on.
 
 === Prerequisites
 
-With oCIS, not much is needed to run your ownCloud server the way you want. Check out the short list of xref:prerequisites/index.adoc[prerequisites].
+With oCIS, not much is needed to run your ownCloud server the way you want. Check out the details in the xref:prerequisites/index.adoc[Prerequisites] section. We strongly recommend to make your mind about availability and scalability first.
 
 === Installation
 
