--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -45,7 +45,7 @@ With knowledge about architecture and concepts, look at the different xref:avail
 
 === Prerequisites
 
-With oCIS, not much is needed to run your ownCloud server the way you want. Check out the details in the xref:prerequisites/index.adoc[Prerequisites] section. We strongly recommend to make your mind about availability and scalability first.
+With oCIS, not much is needed to run your ownCloud server the way you want. Check out the details in the xref:prerequisites/index.adoc[Prerequisites] section. We strongly recommend to make up your mind about availability and scalability first.
 
 === Installation
 
