Apply suggestions from code review
Language review

--- a/modules/ROOT/pages/architecture/index.adoc
+++ b/modules/ROOT/pages/architecture/index.adoc
@@ -9,22 +9,22 @@
 :oidc-url: https://openid.net/connect/
 :webdav-url: http://webdav.org/
 
-:description: This page gives you an overview of the architecture and the concepts behind ownCloud Infinite Scale. oCIS was desingned from the beginning as a data platform providing tools to integrate, organize, share and govern data and metadata.
+:description: This page gives you an overview of the architecture and the concepts behind ownCloud Infinite Scale. oCIS was designed from the beginning as a data platform providing tools to integrate, organize, share and govern data and metadata.
 
 == Introduction
 
 {description}
 
-These items are always kept in mind during the development of oCIS:
+These topics have always been kept in mind during the development of oCIS:
 
-* Data Platform
-* Unified Data Access 
-* Cloud Data Ecosystems
-* Support of the Customers Data Strategy
+* data platform
+* unified data access 
+* cloud data ecosystems
+* support of the customers data strategy
 
 == Architecture Overview
 
-When looking to the image below, you see that the state of classical file sharing is not sufficient for todays requirements and the path clearly goes to services around data and metadata. This means, that hard set structures do not enable additional values that could be created out of data and metadata. Services available to clients like endusers or management have to be able to follow different and dynamic requirements. This is the base for the decision of the oCIS architecture. 
+Looking at the image below, you see that the state of classic file sharing is not sufficient for today's requirements and the trend clearly heads toward services around data and metadata. Iron-cast structures do not allow for additional value that could be created out of data and metadata. Services available to clients like end users or management have to be able to follow different and dynamic requirements. This is the basis of the oCIS architecture. 
 
 image::architecture/ocis_data_platform.svg[width=750]
 
@@ -42,7 +42,7 @@ Use this link to download the link:{attachmentsdir}/architecture/ocis-c4-model.d
 image:architecture/ocis_c4m_system_landscape.svg[]
 
 
-*THIS PART IS NOT FINISHED AND NEEDS MORE CONTENT - THE DETAILS OF THE C4 MODEL ARE URGENTLY NEEDED. WHEN DONE, THE IMAGE BELOW CAN BE REMOVED. PLEASE DOWNLOAD THE C4MODEL FILE, REFINE IT AND CREATE A PR WITH THE CHANGES. WE WILL MAKE OUT OF THE CHANGES VIA THE DESCRIPBED PROCESS (see the file) THE .svg IMAGES AND ADD THEM*
+*THIS PART IS NOT FINISHED AND NEEDS MORE CONTENT - THE DETAILS OF THE C4 MODEL ARE URGENTLY NEEDED. WHEN DONE, THE IMAGE BELOW CAN BE REMOVED. PLEASE DOWNLOAD THE C4MODEL FILE, REFINE IT AND CREATE A PR WITH THE CHANGES. WE WILL USE THE CHANGES  TO CREATE THE .svg IMAGES AND ADD THEM VIA THE DESCRIBED PROCESS (see the file).*
 
 // harvested from https://owncloud.dev/ocis/
 
